--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ body {
 }
 
 /* Dropdown Menus */
-#dayMenu {
+/* #dayMenu {
     display: none;
     position: absolute;
     background-color: #444;
@@ -82,7 +82,7 @@ body {
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.5);
     z-index: 10;
     width: 30%;
-}
+} */
 
 #dayMenu button {
     display: block;
