--- a/style.css
+++ b/style.css
@@ -71,18 +71,18 @@ body {
 }
 
 /* Dropdown Menus */
-/* #dayMenu {
-    display: none;
-    position: absolute;
-    background-color: #444;
-    color: #fff;
-    border-radius: 10px;
-    padding: 10px;
-    text-align: left;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.5);
-    z-index: 10;
-    width: 30%;
-} */
+#dayMenu {
+    display: none; /* Hidden by default */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8); /* Semi-transparent background */
+    justify-content: center;
+    align-items: center;
+    z-index: 20;
+} 
 
 #dayMenu button {
     display: block;
